pt:fixed the overflowing container on animation

--- a/src/index.css
+++ b/src/index.css
@@ -1179,21 +1179,10 @@ video {
   --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
 }
 
-.from-accentTextContrast-dark {
-  --tw-gradient-from: hsl(137, 72.0%, 94.0%);
-  --tw-gradient-to: hsl(137 72.0% 94.0% / 0);
-  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
-}
-
 .from-accentTextContrast {
   --tw-gradient-from: hsl(155, 40.0%, 14.0%);
   --tw-gradient-to: hsl(155 40.0% 14.0% / 0);
   --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
-}
-
-.via-accentTextContrast-dark {
-  --tw-gradient-to: hsl(137 72.0% 94.0% / 0);
-  --tw-gradient-stops: var(--tw-gradient-from), hsl(137, 72.0%, 94.0%), var(--tw-gradient-to);
 }
 
 .via-accentText {
@@ -1364,14 +1353,6 @@ video {
   text-align: start;
 }
 
-.-indent-8 {
-  text-indent: -2rem;
-}
-
-.indent-8 {
-  text-indent: 2rem;
-}
-
 .font-sans {
   font-family: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 }
@@ -1430,6 +1411,10 @@ video {
   font-weight: 600;
 }
 
+.leading-10 {
+  line-height: 2.5rem;
+}
+
 .leading-4 {
   line-height: 1rem;
 }
@@ -1446,18 +1431,6 @@ video {
   line-height: 1;
 }
 
-.leading-5 {
-  line-height: 1.25rem;
-}
-
-.leading-9 {
-  line-height: 2.25rem;
-}
-
-.leading-10 {
-  line-height: 2.5rem;
-}
-
 .tracking-tight {
   letter-spacing: -0.025em;
 }
@@ -1466,12 +1439,12 @@ video {
   letter-spacing: 0.025em;
 }
 
-.tracking-widest {
-  letter-spacing: 0.1em;
-}
-
 .tracking-wider {
   letter-spacing: 0.05em;
+}
+
+.tracking-widest {
+  letter-spacing: 0.1em;
 }
 
 .text-accentText {
@@ -1778,11 +1751,6 @@ video {
   --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
 }
 
-.dark .dark\:via-accentTextContrast-dark {
-  --tw-gradient-to: hsl(137 72.0% 94.0% / 0);
-  --tw-gradient-stops: var(--tw-gradient-from), hsl(137, 72.0%, 94.0%), var(--tw-gradient-to);
-}
-
 .dark .dark\:via-accentText-dark {
   --tw-gradient-to: hsl(151 50.0% 53.2% / 0);
   --tw-gradient-stops: var(--tw-gradient-from), hsl(151, 50.0%, 53.2%), var(--tw-gradient-to);
@@ -1850,23 +1818,6 @@ video {
   --tw-ring-color: hsl(154 48.4% 12.9% / var(--tw-ring-opacity));
 }
 
-@media not all and (min-width: 768px) {
-  .max-md\:px-2 {
-    padding-left: 0.5rem;
-    padding-right: 0.5rem;
-  }
-
-  .max-md\:px-1 {
-    padding-left: 0.25rem;
-    padding-right: 0.25rem;
-  }
-
-  .max-md\:px-1\.5 {
-    padding-left: 0.375rem;
-    padding-right: 0.375rem;
-  }
-}
-
 @media (min-width: 640px) {
   .sm\:max-w-sm {
     max-width: 24rem;
@@ -1886,6 +1837,16 @@ video {
     --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
     --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(1px + var(--tw-ring-offset-width)) var(--tw-ring-color);
     box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
+  }
+
+  .sm\:ring-accentBgHover {
+    --tw-ring-opacity: 1;
+    --tw-ring-color: hsl(140 48.7% 91.0% / var(--tw-ring-opacity));
+  }
+
+  .dark .dark\:sm\:ring-accentBgHover-dark {
+    --tw-ring-opacity: 1;
+    --tw-ring-color: hsl(154 48.4% 12.9% / var(--tw-ring-opacity));
   }
 
   @media not all and (min-width: 768px) {
@@ -1969,10 +1930,6 @@ video {
     width: 95%;
   }
 
-  .md\:w-full {
-    width: 100%;
-  }
-
   .md\:w-fit {
     width: -webkit-fit-content;
     width: -moz-fit-content;
@@ -2044,21 +2001,9 @@ video {
     padding-bottom: 1.25rem;
   }
 
-  .md\:text-left {
-    text-align: left;
-  }
-
   .md\:text-5xl {
     font-size: 3rem;
     line-height: 1;
-  }
-
-  .md\:leading-5 {
-    line-height: 1.25rem;
-  }
-
-  .md\:tracking-wider {
-    letter-spacing: 0.05em;
   }
 
   .md\:shadow-accentSolid {
